<resources>
    <string name="app_name">同频陪伴</string>
    <string name="tv_back">返回</string>
    <string name="nopermission">没有权限</string>
    <string name="more">更多</string>

    <string name="phone_user">手机用户</string>

    <string name="operation">Operation</string>
    <string name="content_text">This is content message.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="text_iknow">I Know</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="text_data">Your info text goes here. Loremipsum dolor sit amet, consecteturn adipisicing elit, sed do eiusmod.</string>
    <string name="prompt_dialog">Prompt Dialog</string>
    <string name="pic">Pic</string>
    <string name="text">Text</string>
    <string name="text_and_pic">Text And Pic</string>
    //注册
    <string name="zhuce">没有账号？快速注册</string>
    <string name="no_permission_to_use_the_camera"> 相机被设置禁用，您可以在“设置 ---> 应用管理”对此应用权限进行重新设置</string>
    <string name="no_permission_to_use_the_read_external"> 文件存储被设置禁用，您可以在“设置 ---> 应用管理”对此应用权限进行重新设置</string>
    <string name="no_permission_to_read_file">读取文件权限被禁止，您可以在“设置 ---> 应用管理”对此应用权限进行重新设置</string>

    <string name="login_success">登录成功</string>
    <string name="me_item_zxing">入学通知书</string>
    <string name="me_item_energy">氢能量</string>
    <string name="me_item_about">关于我们</string>
    <string name="me_item_idea">意见反馈</string>
    <string name="me_item_change">退出登录</string>
    <string name="me_energy_rule">1、每天签到获得5个V能量。\n2、每次提问获得1个陪伴学分。\n3、每次提问发布到直播奖励15个V能量。\n4、每次提问被回复奖励20个V能量。\n5、关注老师奖励5个V能量。</string>
    <string name="me_rule">规则</string>
    <string name="me_energy_10">最近十次记录</string>
    <string name="me_energy_title">V能量</string>
    <string name="my_resouse">个人资料</string>
    <string name="my_zxing">二维码</string>
    <string name="my_zxing_explain">扫描上方二维码，陪我一起学习</string>
    <string name="about_version">当前版本</string>
    <string name="about_us">关于我们</string>
    <string name="my_feedback">意见反馈</string>
    <string name="publish_idea">发表反馈</string>
    <string name="publish">发送</string>
    <string name="idea_hint">请输入你的问题和意见</string>
    <string name="push_set">推送设置</string>
    <string name="message_push">消息推送</string>
    <string name="push_property">性能和流量</string>
    <string name="push_allow">允许运营商流量观看和缓存</string>
    <string name="my_setting">设置</string>
    <string name="me_study">陪伴学习</string>
    <string name="me_study_empty">暂时没有陪伴的学生，你可以点击添加\n，扫描学生二维码后陪伴一起学习</string>
    <string name="me_relation">您是他/她的：</string>
    <string name="me_title_check_relation">选择关系</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_data_sex">性别</string>
    <string name="my_data_name">姓名</string>
    <string name="my_data_head">头像</string>
    <string name="my_data_birthday">生日</string>
    <string name="my_data_phone">手机号</string>
    <string name="data_save">保存</string>
    <string name="system_message">系统消息</string>
    <string name="me_check_user">是否确定切换用户</string>
    <string name="me_check_out">您未登录，请先登录后再操作</string>
    <string name="me_sure">确认</string>
    <string name="me_cancle">取消</string>
    <string name="study_today_text">今日学习</string>
    <string name="sigin_text">签到</string>
    <string name="me_collection">我的收藏</string>
    <string name="me_star">我的关注</string>
    <string name="title_live_text">陪伴教育</string>
    <string name="text_updata">软件升级</string>
    <string name="text_setting">账号设置</string>
    <string name="text_clean_cache">清除应用缓存</string>
    <string name="comment_text">评论</string>
    <string name="message_title">消息</string>
    <string name="icon">icon</string>
    <string name="giraffe_player_url_empty">请指定播放视频的地址</string>
    <string name="small_problem">加载失败,稍后重试</string>
    <string name="can_not_play">不能播放此视频</string>
    <string name="not_support">播放器不支持此设备</string>
    <string name="no_net">请连接网络</string>
    <string name="search_toast">请输入关键字</string>
    <string name="no_search_toast">没有相关内容</string>
    <string name="no_study_toast">该课程未添加直播课时</string>
</resources>
